Finished chapter  Conclusion

--- a/text/tex/content.tex
+++ b/text/tex/content.tex
@@ -1386,15 +1386,14 @@ An attempt was made to localize another moving target in \textsc{pitch} dataset 
 %=========================================================================
 \chapter{Conclusion} \label{txt:conclusion}
 
-\todo{zhodnocení z pohledu dalšího vývoje projektu}
-\todo{student uvede rovněž návaznosti na právě dokončené projekty (řešené v rámci ostatních diplomových prací v daném roce nebo na projekty řešené na externích pracovištích).}
-\todo{zhodnocení dosažených výsledků se zvlášť vyznačeným vlastním přínosem diplomanta}
+A novel system for autonomous optical localization of arbitrary distant targets was presented in this work. The system is based on the visual tracking and mutli-view triangulation approaches. Triangulation is well known and widely used approach, however, the main contribution of the system is its semi-autonomous operation based on mere visual clues as opposed to the actively radiating solutions such as radars.
 
+First, the existing state-of-the-art approaches to visual tracking were summarized and two techniques, the TLD tracker and BGFG tracker, were selected to be incorporated in the OLS. Then the problematics of multi-view triangulation was discussed and the approaches used to reconstruct the 3D environment which could be used as the base for occlusion prediction were discussed.
 
-This work presents a novel system for autonomous optical localization of aerial targets. The principle of triangulation is well known and widely used, however the main contribution of the system is the fact it is designed to operate autonomously from detecting the object to estimating its position. As the first step, a suitable placement of available camera units had to be designed and the proper hardware components, which each camera station consists of, had to be selected. A model of the camera unit represented by a kinematic chain was proposed and all camera units were then rectified in order to minimize the difference between the model and the real construction of the camera units.
+Thorough precision analysis was performed so as to pinpoint the most severe sources of the error. The geometrical limitations of the OLS were demonstrated and the merits of multiple-view setup over the stereo setup in the means of localization precision were shown. The stationing and rectification procedures aiming on eliminating the systematic error were then proposed. 
 
-As for the software solution, the most promising computer vision techniques for both detection and tracing of the target were proposed and one of them, a free implementation of the TLD algorithm was eventually integrated in the system. The architecture of the system based on the ROS framework was designed and implemented and the physical simulation software Gazebo was used to experiment with the system placed in a virtual scene.
+The model of the camera unit based on the kinematic chain was then proposed. In order to minimize the impact of the random error the BGFG tracker was adjusted so as to estimate the belief of each measurement and to include the information from frame differencing. Suitable functions for regulating the motion of the P\&T unit were discussed and the approach to triangulate the target position with the knowledge of trackers' belief and target-base geometry was proposed.
 
-As far as the further development is concerned, the autonomous detection algorithm will be implemented and the tracking algorithm will be improved on since the OLS system expects a static background (as opposed to the TLD) so the background modeling could be incorporated to further improve the tracker performance. The subsystem for target handoff among the cameras will be designed and implemented and the localization algorithm will be improved on to reflect the uncertainty of the locations and orientations of the separate joints in the kinematic models and to provide the result in global geographical coordinates (most likely UTM). A proper dataset will be acquired and the system will be tested thoroughly.
+The OLS was implemented in C++ within the framework ROS. Additionally, the physical simulator Gazebo was used in both development and testing phase. The OLS was first tested using Gazebo in the hardware-in-the-loop manner. Next, two datasets were obtained in the real world environment and the system was tested against both static and moving targets. It has been shown that the localization precision is 4-10 times lower than expected while most likely culprit is the imprecisely performed stationing and rectification.
 
-\vata[5]
+There are multiple possibilities of what to focus on in further development. The tracking algorithm should be investigated so that it would perform well even with cluttered background. More thorough stationing and rectification should be performed so as to verify the main source of imprecise localization was the systematic error. Furthermore, automatic detection and possibly classification of moving targets could be implemented and the approach to handoff the target among separate CUs should be proposed to make the OLS fully autonomous.
